# ps

./: CMakeLists.txt  README.md
inc/: amplification.hh  commandLineParser.hh  fading.hh  filter.hh  speedChange.hh  utils.hh
src/: amplification.cpp  commandLineParser.cpp  fading.cpp  filter.cpp  main.cpp  speedChange.cpp
